--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
-
 :root {
     --cor-de-fundo: #1E1E1E;
     --verde: #6FFF57;
@@ -22,6 +21,7 @@ body {
     width: 100%;
     margin: 0 auto;
 }
+
 .titulo-principal {
     text-align: left;
     width: 100%;
@@ -30,6 +30,7 @@ body {
 .titulo-principal span {
     color: var(--verde);
 }
+
 .botao {
     font-family: "Crakra Petch", sans-serif;
     background-color: var(--botao-inativo);
@@ -44,27 +45,76 @@ body {
     border-left: 2px solid var(--botao-ativo); 
     border-right: 2px solid var(--botao-ativo); 
     border-top: none;
+}
+.botoes {
+    display: block;
+}
+
+.botao:first-child {
+    border-radius: 40px 40px 0 0;
+}
+@media screen and (min-width: 768px) {
     .botoes {
-        display: block;
+        display: flex;
     }
-    
-    @media screen and (min-width: 768px) {
-        .botoes {
-            display: flex;
-        }
-        .botao:first-child {
-            border-radius: 40px 40px 0 0;
-        
-        @media screen and (min-width: 768px) {
-            .botoes {
-                display: flex;
-            }
-        
-            .botao:first-child {
-                border-radius: 40px 0 0 0;
-            }
-        
-            .botao:last-child {
-                border-radius: 0 40px 0 0;
-            }
-        }
+
+    .botao:first-child {
+        border-radius: 40px 0 0 0;
+    }
+
+    .botao:last-child {
+        border-radius: 0 40px 0 0;
+    }
+}
+
+.botao.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+
+.abas-textos{
+    background-color: var(--texto-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
+}
+.aba-conteudo.ativo{
+    display:block;   
+}
+.aba-conteudo{
+    display: none;
+}
+.aba-conteudo-titulo-principal{
+    font-size: 28px;
+    text-align: center;
+}
+.aba-conteudo-titulo-secundario{
+    text-align: center;
+    color: var(--verde);
+    text-transform: uppercase;
+}
+.contador{
+    display: flex;
+    font-size: 30px;
+    text-align: center;
+
+}
+.contador{
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contador-digito{
+    padding: 0 16px;
+    text-align: center;
+    min-width: 100px;
+}
+.contador-digito-numero{
+    font-size: 80px;
+    margin: 0;
+}
+.contador-digito-texto{
+    color: var(--verde);
+    font-size: 20px;
+    margin: 0;
+}
